<resources>
    <string name="app_name" translatable="false">Eloy Ahora!</string>
    <string name="lbl1">TV</string>
    <string name="lbl2">Phones</string>
    <string name="lbl3">Games</string>
    <string name="lbl4">Home appliances</string>
    <string name="lbl5">Pc</string>
    <string name="title_activity_info">Info</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="cleanBtn">Clean</string>
    <string name="sendBtn">Send</string>
    <string name="sign_Up">Sign Up</string>
    <string name="name">Name</string>
    <string name="password_Again">Password Again</string>
    <string name="E_Mail">E-Mail</string>
    <string name="submitBtn">Submit</string>
    <string name="wish_List">Wish List</string>
    <string name="searchTxt">Search</string>
    <string name="user_or_password_incorrect">User or Password Incorrect.</string>
</resources>
