<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.luisfernando.superhipermegaperron.MenuActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:padding="10dp">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:background="#ffffff"
                    android:id="@+id/TV_BUTTON"
                    android:padding="20dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl1"

                    android:id="@+id/textView" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:padding="10dp">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:background="#ffffff"
                    android:id="@+id/PHONES_BUTTON"
                    android:padding="20dp"
                    android:scaleType="fitCenter" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl2"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:padding="10dp">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:background="#ffffff"
                    android:id="@+id/GAMES_BUTTON"
                    android:padding="20dp"
                    android:scaleType="fitCenter" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl3"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:padding="10dp">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:background="#ffffff"
                    android:id="@+id/HHITEMS_BUTTON"
                    android:padding="20dp"
                    android:scaleType="fitCenter" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl4"

                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:padding="10dp">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:background="#ffffff"
                    android:id="@+id/MUSIC_BUTTON"
                    android:padding="20dp"
                    android:scaleType="fitCenter" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl5"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:padding="10dp">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:background="#ffffff"

                    android:id="@+id/LOG_OUT_BUTTON"
                    android:padding="20dp"
                    android:scaleType="fitCenter" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Log Out"

                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
